apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media
          hostPath:
            path: /home/media
            type: Directory
